{
  "version": 4,
  "terraform_version": "1.12.0",
  "serial": 44,
  "lineage": "cefde125-f85e-315b-9a6b-cae7b1b9bc4c",
  "resources": [
    {
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:010438473373:vpc/vpc-09e724c82b43dd11a",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-07d04f0de59323499",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02b2e820f8b111731",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09e724c82b43dd11a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-02f46bba31fc17580",
            "owner_id": "010438473373"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "nextjs_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-075924b436aa32cd4",
            "arn": "arn:aws:ec2:ap-southeast-2:010438473373:instance/i-0ee7d94f170f805d4",
            "associate_public_ip_address": true,
            "availability_zone": "ap-southeast-2a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "goldenset-devops-internship-assignment-profile",
            "id": "i-0ee7d94f170f805d4",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "sherry-keypair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-00b003df265c30b73",
            "private_dns": "ip-172-31-13-3.ap-southeast-2.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "172.31.13.3",
            "public_dns": "ec2-13-211-24-170.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "13.211.24.170",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0225c81b69f13dcdf",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "security_groups": [
              "goldenset-devops-internship-assignment-sg"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0bc60f8a124ec5507",
            "tags": {
              "Name": "goldenset-devops-internship-assignment-ec2"
            },
            "tags_all": {
              "Name": "goldenset-devops-internship-assignment-ec2"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d3c05be40d471a30"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.ec2_profile",
            "aws_iam_role.ec2_role",
            "aws_security_group.nextjs_sg",
            "data.aws_subnets.default",
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "nextjs_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:010438473373:security-group/sg-0d3c05be40d471a30",
            "description": "Allow SSH and HTTP",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d3c05be40d471a30",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Next.js HTTP access",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "goldenset-devops-internship-assignment-sg",
            "name_prefix": "",
            "owner_id": "010438473373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "goldenset-devops-internship-assignment-sg"
            },
            "tags_all": {
              "Name": "goldenset-devops-internship-assignment-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e724c82b43dd11a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:010438473373:security-group/sg-0cc43517fb7b285ee",
            "description": "Allow PostgreSQL inbound from EC2",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cc43517fb7b285ee",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "PostgreSQL access from EC2",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d3c05be40d471a30"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "goldenset-devops-internship-assignment-rds-sg",
            "name_prefix": "",
            "owner_id": "010438473373",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "goldenset-devops-internship-assignment-rds-sg"
            },
            "tags_all": {
              "Name": "goldenset-devops-internship-assignment-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-09e724c82b43dd11a"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.nextjs_sg",
            "data.aws_vpc.default"
          ]
        }
      ]
    }
  ]
}